--- a/application/index/view/public/css.html
+++ b/application/index/view/public/css.html
@@ -5,5 +5,5 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="renderer" content="webkit">
 <meta http-equiv="Cache-Control" content="no-siteapp" />
-<link rel="alternate icon" type="image/png" href="assets/i/favicon.png">
-<link rel="stylesheet" href="assets/css/amazeui.min.css"/>
+<link rel="alternate icon" type="image/png" href="__ASSETS__/i/favicon.png">
+<link rel="stylesheet" href="__ASSETS__/css/amazeui.min.css"/>
